################################################################################
#                                                                              #
# Copyright (C) 2019 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################




# This directory contains only files provided by Honda
# They should be copied to this directory without (or with minimal)
# manual modifications, and then copied and modified as needed by
# the rest of the files.

add_subdirectory(cer_description)

