################################################################################
#                                                                              #
# Copyright (C) 2019 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

# @author: Lorenzo Rapetti <lorenzo.rapetti@iit.it>


# Add models
add_subdirectory(models)

# Add gazebo worlds
add_subdirectory(worlds)


