################################################################################
#                                                                              #
# Copyright (C) 2019 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

# @author: Mohamed Elobaid <mohamed.elobaid@iit.it>


add_subdirectory(cer-sim)
