################################################################################
#                                                                              #
# Copyright (C) 2019 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

# @author: Lorenzo Rapetti <lorenzo.rapetti@iit.it>


# Add hand model
add_subdirectory(cer_description)


